unpackaged/main/default/objects/conference360__Event_Item_Session__c/conference360__Event_Item_Session__c.object-meta.xml
<CustomObject>
    <label>Event Item Session</label>
    <nameField>
        <displayFormat>EIS-{000000}</displayFormat>
        <label>Event Item Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Item Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>