unpackaged/main/default/objects/conference360__Event_Item_Session__c/fields/conference360__Free__c.field-meta.xml
<CustomField>
    <fullName>conference360__Free__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this checkbox if the Session does not require a payment to register, i.e. it’s Free.</inlineHelpText>
    <label>Free</label>
    <type>Checkbox</type>
</CustomField>