unpackaged/main/default/objects/conference360__Event_Item_Session__c/fields/conference360__Price__c.field-meta.xml
<CustomField>
    <fullName>conference360__Price__c</fullName>
    <inlineHelpText>The price for this session.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>