unpackaged/main/default/objects/conference360__Event_Item_Session__c/fields/conference360__Price_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>conference360__Price_With_Tax__c</fullName>
    <description>Line item price plus Tax Amount.</description>
    <inlineHelpText>Line item price plus Tax Amount.</inlineHelpText>
    <label>Price with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>