unpackaged/main/default/objects/conference360__Event_Item_Session__c/fields/conference360__Session__c.field-meta.xml
<CustomField>
    <fullName>conference360__Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>conference360__Session__c</referenceTo>
    <relationshipLabel>Event Item Sessions</relationshipLabel>
    <relationshipName>Event_Item_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>