unpackaged/main/default/objects/conference360__Event_Item_Session__c/fields/conference360__Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>conference360__Tax_Amount__c</fullName>
    <description>Calculated as a percentage of the price based on the associated fee.</description>
    <inlineHelpText>Line item tax amount.</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>