unpackaged/main/default/objects/conference360__Event_Item_Session__c/fields/conference360__Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>conference360__Tax_Rate__c</fullName>
    <description>Tax rate for the Event Item Session, set automatically based on the Event Tax Fee lookup.</description>
    <inlineHelpText>Tax rate for the Event Item Session, set automatically based on the Event Tax Fee lookup.</inlineHelpText>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>